Added ThreadFix publisher

--- a/src/main/resources/org/jenkinsci/plugins/DependencyCheck/Messages.properties
+++ b/src/main/resources/org/jenkinsci/plugins/DependencyCheck/Messages.properties
@@ -14,6 +14,7 @@
 
 Builder.Name=Invoke OWASP Dependency-Check analysis
 Publisher.Name=Publish OWASP Dependency-Check analysis results
+ThreadFixPublisher.Name=Publish OWASP Dependency-Check analysis results to ThreadFix
 
 ProjectAction.Name=Dependency-Check Warnings
 Trend.Name=Dependency-Check Trend
